--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -23,12 +23,12 @@
         <img src="./images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
     </header>
 
-    <main class="main_lapalettedugout">
+    <main class="main_restaurants">
         
         <article>
             <!-- Restaurant name title -->
             <div class="title-restaurant-page">
-                <h1>La palette du goût</h1>
+                <h1>La note enchantée</h1>
                 <i class="far fa-heart"></i>
             </div>
             <!-- Starter -->
@@ -39,8 +39,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Fricassée d'escargot</h3>
-                            <p>Au piment d'Espelette </p>
+                            <h3>Ravioles de foie gras</h3>
+                            <p>Accompagnés de leur crème à la truffe</p>
                         </div>
                         <p>25€</p>
                     </div>
@@ -54,8 +54,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire</p>
+                            <h3>Caviar osciètre</h3>
+                            <p>Sur blini à la farine de blé noir</p>
                         </div>
                         <p>35€</p>    
                     </div>
@@ -69,8 +69,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Oeuf au plat</h3>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <h3>Homard et espuma de potiron</h3>
+                            <p>Mariné aux zestes d'orange</p>
                         </div>
                         <p>20€</p>    
                     </div>
@@ -79,6 +79,21 @@
                         <i class="fas fa-check"></i>
                     </div>
                 </div>
+                <div class="menu__dishcard">
+                    <!-- Text -->
+                    <div class="dishcard-text-all">
+                        <div class="dishcard-text">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <p>35€</p>    
+                    </div>
+                    <!-- Hover -->
+                    <div class="dishcard-check">
+                        <i class="fas fa-check"></i>
+                    </div>
+                </div>
+
             </section>
             <!-- Main course -->
             <section class="menu fade-in two">
@@ -88,8 +103,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Filet de boeuf aux herbes</h3>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <h3>Noix de coquilles Saint-Jacques</h3>
+                            <p>Sur lit de purée de céleri-rave</p>
                         </div>
                         <p>40€</p>
                     </div>
@@ -103,8 +118,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Parmentier de queue de boeuf</h3>
-                            <p>À la truffe noire sur sa purée de panais</p>
+                            <h3>Langoustine poêlée</h3>
+                            <p>Purée de patate douce</p>
                         </div>
                         <p>35€</p>
                     </div>
@@ -118,8 +133,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Filet de turbot</h3>
-                            <p>Aux agrumes</p>
+                            <h3>Mijoté de queue de boeuf</h3>
+                            <p>Et riz sauvage aux zestes de citron</p>
                         </div>
                         <p>44€</p>
                     </div>
@@ -137,8 +152,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Paris-Brest</h3>
-                            <p>Revisité</p>
+                            <h3>Macaron noisette et chocolat</h3>
+                            <p>Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <p>18€</p>
                     </div>
@@ -152,8 +167,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Macaron au chocolat d'exception</h3>
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <h3>Baba au rhum revisité</h3>
+                            <p>Avec son coulis de citron</p>
                         </div>
                         <p>22€</p>
                     </div>
@@ -167,8 +182,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Mousse au chocolat </h3>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <h3>Tarte au citron meringuée</h3>
+                            <p>Déstructurée</p>
                         </div>
                         <p>23€</p>
                     </div>
@@ -186,7 +201,7 @@
 
         <!-- Restaurant top image -->
         <aside>
-            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant la palette du goût">
+            <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant la note enchantée">
         </aside>
 
     </main>
