--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -28,7 +28,7 @@
         <article>
             <!-- Restaurant name title -->
             <div class="title-restaurant-page">
-                <h1>La palette du goût</h1>
+                <h1>Le délice des sens</h1>
                 <i class="far fa-heart"></i>
             </div>
             <!-- Starter -->
@@ -39,8 +39,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Fricassée d'escargot</h3>
-                            <p>Au piment d'Espelette</p>
+                            <h3>Tartare de thon</h3>
+                            <p>Assaisonné au yuzu</p>
                         </div>
                         <p>25€</p>
                     </div>
@@ -54,8 +54,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire</p>
+                            <h3>Bouchée de homard croustillant</h3>
+                            <p>Et sa farandole de petits légumes</p>
                         </div>
                         <p>35€</p>    
                     </div>
@@ -69,8 +69,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Oeuf au plat</h3>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <h3>Velouté de cèpes</h3>
+                            <p>Aux truffes</p>
                         </div>
                         <p>20€</p>    
                     </div>
@@ -88,8 +88,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Filet de boeuf aux herbes</h3>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <h3>Poulet rôti aux herbes de Provence</h3>
+                            <p>Et sa crème de truffe</p>
                         </div>
                         <p>40€</p>
                     </div>
@@ -103,8 +103,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Parmentier de queue de boeuf</h3>
-                            <p>À la truffe noire sur sa purée de panais</p>
+                            <h3>Langouste rôtie</h3>
+                            <p>Et ses légumes de saison</p>
                         </div>
                         <p>35€</p>
                     </div>
@@ -118,8 +118,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Filet de turbot</h3>
-                            <p>Aux agrumes</p>
+                            <h3>Côte de boeuf Angus</h3>
+                            <p>Et sa purée de panais</p>
                         </div>
                         <p>44€</p>
                     </div>
@@ -137,8 +137,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Paris-Brest</h3>
-                            <p>Revisité</p>
+                            <h3>Farandole de desserts</h3>
+                            <p>Du chef</p>
                         </div>
                         <p>18€</p>
                     </div>
@@ -152,8 +152,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Macaron au chocolat d'exception</h3>
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <h3>Crème brulée</h3>
+                            <p>Revisitée</p>
                         </div>
                         <p>22€</p>
                     </div>
@@ -167,8 +167,8 @@
                     <!-- Text -->
                     <div class="dishcard-text-all">
                         <div class="dishcard-text">
-                            <h3>Mousse au chocolat</h3>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <h3>Tiramisu</h3>
+                            <p>À la noisette</p>
                         </div>
                         <p>23€</p>
                     </div>
@@ -186,7 +186,7 @@
 
         <!-- Restaurant top image -->
         <aside>
-            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant la palette du goût">
+            <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant le délice des sens">
         </aside>
 
     </main>
